get rid of watched widget

BUG:283626
FIXED-IN:4.9